feat: add 3rd browser column + auto like reciprocation on double-click

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,8 @@ set(PROJECT_SOURCES
     # Core
     src/Core/NotificationCollector.h
     src/Core/NotificationCollector.cpp
+    src/Core/ReciprocatorEngine.h
+    src/Core/ReciprocatorEngine.cpp
 )
 
 # Create executable
