feat: add 3 new features - pagination/auto-refresh, stats tab, batch reciprocate

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,8 @@ set(PROJECT_SOURCES
     src/UI/WebView2Widget.cpp
     src/UI/ActionListPanel.h
     src/UI/ActionListPanel.cpp
+    src/UI/StatsPanel.h
+    src/UI/StatsPanel.cpp
     # Data
     src/Data/SocialAction.h
     src/Data/DataStorage.h
